--- a/app/src/main/res/layout/activity_bill_summary.xml
+++ b/app/src/main/res/layout/activity_bill_summary.xml
@@ -1,9 +1,196 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="es.soutullo.blitter.view.activity.BillSummaryActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+        <variable name="utils" type="es.soutullo.blitter.view.util.BlitterUtils" />
+        <variable name="bill" type="es.soutullo.blitter.model.vo.bill.Bill" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="es.soutullo.blitter.view.activity.BillSummaryActivity">
+
+        <TextView
+            android:id="@+id/blitter_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/bill_summary_header"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:id="@+id/bill_summary_separator1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="--------------------------------"
+            android:text="@string/bill_summary_separator_product_count"
+            android:typeface="monospace"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/blitter_header"
+            app:layout_constraintHorizontal_bias="0.509"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/total_products_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bill_summary_total_products_text"
+            app:layout_constraintLeft_toLeftOf="@+id/bill_summary_separator1"
+            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator1"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/total_products_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{String.valueOf(bill.lines.size())}"
+            tools:text="20"
+            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator1"
+            android:layout_marginRight="1dp"
+            app:layout_constraintRight_toRightOf="@+id/bill_summary_separator1"
+            android:layout_marginEnd="1dp"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/bill_summary_separator2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="--------------------------------"
+            android:text="@string/bill_summary_separator_product_count"
+            android:typeface="monospace"
+            app:layout_constraintTop_toBottomOf="@+id/total_products_text"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/products_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/bill_summary_products_header"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator2"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/bill_summary_separator3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="================================"
+            android:text="@string/bill_summary_separator_products_title"
+            android:typeface="monospace"
+            app:layout_constraintTop_toBottomOf="@+id/products_header"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/bill_summary_separator4"
+            app:layout_constraintLeft_toLeftOf="@+id/bill_summary_separator3"
+            app:layout_constraintRight_toRightOf="@+id/bill_summary_separator3"
+            app:layout_constraintTop_toBottomOf="@+id/bill_summary_separator3"
+            tools:listitem="@layout/item_bill_summary_bill_line"/>
+
+        <TextView
+            android:id="@+id/bill_summary_separator4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="********************************"
+            android:text="@string/bill_summary_separator_total_price"
+            android:typeface="monospace"
+            app:layout_constraintBottom_toTopOf="@+id/total_price_text"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/total_price_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bill_summary_total_price_text"
+            app:layout_constraintBottom_toTopOf="@+id/bill_summary_separator5"
+            app:layout_constraintLeft_toLeftOf="@+id/bill_summary_separator5"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/total_price_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@{@string/generic_item_price(bill.priceWithoutTip, utils.currencySymbol)}"
+            tools:text="2,07€"
+            app:layout_constraintBottom_toTopOf="@+id/bill_summary_separator5"
+            app:layout_constraintRight_toRightOf="@+id/bill_summary_separator5"
+            android:layout_marginEnd="1dp"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/bill_summary_separator5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="********************************"
+            android:text="@string/bill_summary_separator_total_price"
+            android:typeface="monospace"
+            app:layout_constraintBottom_toTopOf="@+id/amend"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textColor="@color/color_bill_summary_text"
+            android:textSize="16sp"/>
+
+        <Button
+            android:id="@+id/amend"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_amend_bill_summary"
+            android:drawableLeft="@drawable/ic_edit_black_24dp"
+            android:drawableStart="@drawable/ic_edit_black_24dp"
+            android:drawablePadding="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Button
+            android:id="@+id/done"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_continue_bill_summary"
+            android:drawableLeft="@drawable/ic_done_black_24dp"
+            android:drawableStart="@drawable/ic_done_black_24dp"
+            android:drawablePadding="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+</layout>
