--- a/app/src/main/res/layout/activity_manual_transcription.xml
+++ b/app/src/main/res/layout/activity_manual_transcription.xml
@@ -37,10 +37,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_weight="5"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/product_price_text" />
+        app:layout_constraintRight_toLeftOf="@+id/bill_price_text" />
 
     <EditText
-        android:id="@+id/product_price_text"
+        android:id="@+id/bill_price_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:ems="10"
@@ -67,8 +67,8 @@
         app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/add_product"
         android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/product_price_text"
-        app:layout_constraintTop_toTopOf="@+id/product_price_text"
+        app:layout_constraintBottom_toBottomOf="@+id/bill_price_text"
+        app:layout_constraintTop_toTopOf="@+id/bill_price_text"
         app:layout_constraintDimensionRatio="w,1:1"
         app:srcCompat="@drawable/ic_add_black_24dp"
         android:tint="@android:color/white"/>
