--- a/app/src/main/res/layout/item_bill_line_assignation.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="item" type="es.soutullo.blitter.model.vo.bill.Bill" />
+        <import type="android.view.View" />
+
+        <variable name="utils" type="es.soutullo.blitter.view.util.BlitterUtils" />
+        <variable name="item" type="es.soutullo.blitter.model.vo.bill.BillLine" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -12,43 +15,59 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/bill_name_text"
+            android:id="@+id/bill_line_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@{item.name}"
-            tools:text="Cuenta del 17/10/1996"
+            tools:text="Producto A"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@android:color/black"/>
 
         <TextView
-            android:id="@+id/bill_price_text"
+            android:id="@+id/bill_line_assignations_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:text="@{item.beautifulPrice}"
-            tools:text="20,07€ + 3,00€ de propina"
+            android:text="@{item.assignedPeopleAsString}"
+            tools:text="Todavía sin asignar"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bill_name_text"
+            app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
             android:textSize="@dimen/caption_text_size"/>
 
         <TextView
-            android:id="@+id/bill_date"
+            android:id="@+id/bill_line_price_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:text="@{item.beautifulDate}"
-            tools:text="Lunes, 17 de octubre de 1996 a las 22:00"
+            android:text="@{@string/generic_item_price(item.price, utils.currencySymbol)}"
+            tools:text="2,37 €"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bill_price_text"
+            app:layout_constraintTop_toBottomOf="@+id/bill_line_assignations_text"
             android:textSize="@dimen/caption_text_size"/>
+
+        <ImageView
+            android:id="@+id/bill_line_ok"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/ic_done_white_24dp"
+            app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
+            android:layout_marginTop="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
+            android:layout_marginBottom="0dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:tint="@color/material_green_500"
+            android:visibility="@{item.persons.isEmpty()? View.GONE : View.VISIBLE}"
+            android:contentDescription="@string/content_description_assignation_green_tick"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
