--- a/app/src/main/res/layout/item_product_manual_transcription_activity.xml
+++ b/app/src/main/res/layout/item_product_manual_transcription_activity.xml
@@ -6,7 +6,7 @@
 
     <data>
         <variable name="utils" type="es.soutullo.blitter.view.util.BlitterUtils" />
-        <variable name="product" type="es.soutullo.blitter.view.adapter.data.ManualTranscriptionProduct" />
+        <variable name="item" type="es.soutullo.blitter.view.adapter.data.ManualTranscriptionProduct" />
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -20,19 +20,19 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@{product.name}"
+            android:text="@{item.name}"
             tools:text="Producto A"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@android:color/black"/>
 
         <TextView
-            android:id="@+id/product_price_text"
+            android:id="@+id/bill_price_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="@{@string/manual_transcription_product_price(product.unitPrice, utils.currencySymbol)}"
+            android:text="@{@string/manual_transcription_product_price(item.unitPrice, utils.currencySymbol)}"
             tools:text="Precio/unidad: 2,47€"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/product_name_text"
@@ -45,9 +45,9 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:textSize="@dimen/caption_text_size"
-            android:text="@{@string/manual_transcription_product_quantity(product.quantity)}"
+            android:text="@{@string/manual_transcription_product_quantity(item.quantity)}"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_price_text"
+            app:layout_constraintTop_toBottomOf="@+id/bill_price_text"
             tools:text="Unidades: 1" />
 
         <ImageButton
