--- a/app/src/main/res/layout/activity_bill_summary.xml
+++ b/app/src/main/res/layout/activity_bill_summary.xml
@@ -176,7 +176,7 @@
             android:text="@string/button_amend_bill_summary"
             android:drawableLeft="@drawable/ic_edit_black_24dp"
             android:drawableStart="@drawable/ic_edit_black_24dp"
-            android:drawablePadding="4dp"
+            android:drawablePadding="@dimen/drawable_button_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -188,7 +188,7 @@
             android:text="@string/button_continue_bill_summary"
             android:drawableLeft="@drawable/ic_done_black_24dp"
             android:drawableStart="@drawable/ic_done_black_24dp"
-            android:drawablePadding="4dp"
+            android:drawablePadding="@dimen/drawable_button_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
