--- a/app/src/main/res/layout/activity_final_result.xml
+++ b/app/src/main/res/layout/activity_final_result.xml
@@ -1,9 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="es.soutullo.blitter.view.activity.FinalResultActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</android.support.constraint.ConstraintLayout>
+    <data>
+        <variable name="bill" type="es.soutullo.blitter.model.vo.bill.Bill" />
+    </data>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="es.soutullo.blitter.view.activity.FinalResultActivity">
+
+        <TextView
+            android:id="@+id/bill_name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{bill.name}"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.Design.Hint"
+            android:textSize="@dimen/section_title_size"
+            android:textColor="@color/colorAccent"
+            tools:text="Cuenta del 17/10/1996"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" />
+
+        <ImageButton
+            android:id="@+id/rename_bill_button"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/bill_name_text"
+            app:srcCompat="@drawable/ic_edit_black_24dp"
+            android:tint="@color/light_icon_tint"
+            android:background="@android:color/transparent"
+            app:layout_constraintTop_toTopOf="@+id/bill_name_text"
+            android:layout_marginTop="2dp"
+            android:contentDescription="@string/content_description_button_rename_bill"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/final_result_list"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/bill_name_text"
+            android:layout_marginBottom="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/split_again_button"
+            tools:listitem="@layout/item_person_final_result"/>
+
+        <Button
+            android:id="@+id/split_again_button"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
+            android:text="@string/final_result_button_split_again"
+            android:drawableLeft="@drawable/ic_replay_black_24dp"
+            android:drawableStart="@drawable/ic_replay_black_24dp"
+            android:drawablePadding="@dimen/drawable_button_padding"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <Button
+            android:id="@+id/splitting_finished_button"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginEnd="0dp"
+            android:text="@string/final_result_button_finished"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:drawableLeft="@drawable/ic_done_all_black_24dp"
+            android:drawableStart="@drawable/ic_done_all_black_24dp"
+            android:drawablePadding="@dimen/drawable_button_padding" />
+    </android.support.constraint.ConstraintLayout>
+</layout>
