--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="caption_text_size">12sp</dimen>
+    
+    <dimen name="drawable_button_padding">4dp</dimen>
+    <dimen name="section_title_size">18sp</dimen>
 </resources>
