--- a/app/src/main/res/layout/item_person_final_result.xml
+++ b/app/src/main/res/layout/item_person_final_result.xml
@@ -6,10 +6,11 @@
     <data>
         <variable name="utils" type="es.soutullo.blitter.view.util.BlitterUtils" />
         <variable name="item" type="es.soutullo.blitter.model.vo.person.BillPerson" />
+        <variable name="traceFlag" type="Boolean" />
     </data>
 
     <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
@@ -42,7 +43,7 @@
             android:id="@+id/user_paying_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{@string/generic_item_price(item.payingAmountWithTip, utils.currencySymbol)}"
+            android:text="@{traceFlag != null &amp;&amp; traceFlag? item.completePayingAmountAsString : @string/generic_item_price(item.payingAmountWithTip, utils.currencySymbol)}"
             tools:text="3,07 €"
             app:layout_constraintTop_toBottomOf="@+id/user_name"
             app:layout_constraintBottom_toBottomOf="@+id/user_profile_picture"
