--- a/app/src/main/res/layout/item_bill_main_activity.xml
+++ b/app/src/main/res/layout/item_bill_main_activity.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="es.soutullo.blitter.model.vo.bill.EBillStatus" />
+        <import type="android.view.View" />
+
         <variable name="item" type="es.soutullo.blitter.model.vo.bill.Bill" />
     </data>
 
@@ -49,6 +52,25 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_price_text"
             android:textSize="@dimen/caption_text_size"/>
+        
+        <au.com.dardle.widget.BadgeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{item.status != EBillStatus.COMPLETED? View.VISIBLE: View.GONE}"
+            app:badgeBackground="@color/material_red_600"
+            app:badgeTextColor="@android:color/white"
+            app:spacing="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp">
+
+            <au.com.dardle.widget.BadgeItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/badge_bill_status_not_completed"/>
+        </au.com.dardle.widget.BadgeLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
