--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,6 @@
     <color name="color_bill_summary_text">#263238</color>
 
     <color name="material_green_500">#4CAF50</color>
+
+    <color name="material_red_600">#E53935</color>
 </resources>
