Added preference screen

--- a/app/src/main/res/layout/dialog_tip.xml
+++ b/app/src/main/res/layout/dialog_tip.xml
@@ -29,8 +29,8 @@
             android:layout_height="wrap_content"
             app:bsb_bubble_color="@color/colorAccent"
             app:bsb_bubble_text_color="@color/colorPrimaryDark"
-            app:bsb_max="30"
             app:bsb_min="0"
+            app:bsb_max="@integer/max_tip_percent"
             app:bsb_progress="0"
             app:bsb_second_track_color="@color/colorAccent"
             app:bsb_section_count="6"
