Implemented data access objects and some minor corrections to the UML

--- a/app/src/main/res/layout/activity_bill_person_trace.xml
+++ b/app/src/main/res/layout/activity_bill_person_trace.xml
@@ -6,7 +6,7 @@
 
     <data>
         <variable name="utils" type="es.soutullo.blitter.view.util.BlitterUtils" />
-        <variable name="person" type="es.soutullo.blitter.model.vo.person.BillPerson" />
+        <variable name="person" type="es.soutullo.blitter.model.vo.person.Person" />
     </data>
 
     <android.support.constraint.ConstraintLayout
