Implemented VOs and fixed some reusing problems on assignation layout

--- a/app/src/main/res/layout/item_bill_main_activity.xml
+++ b/app/src/main/res/layout/item_bill_main_activity.xml
@@ -34,7 +34,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:text="@{item.beautifulPrice}"
+            android:text="@{item.getBeautifulPrice(context)}"
             tools:text="20,07€ + 3,00€ de propina"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_name_text"
@@ -47,7 +47,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:text="@{item.beautifulDate}"
+            android:text="@{item.getBeautifulDate(context)}"
             tools:text="Lunes, 17 de octubre de 1996 a las 22:00"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_price_text"
