--- a/app/src/main/res/layout/item_bill_line_assignation.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation.xml
@@ -29,16 +29,19 @@
 
         <TextView
             android:id="@+id/bill_line_assignations_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:text="@{item.assignedPeopleAsString}"
+            android:text="@{item.getAssignedPeopleAsString(context, billLineAssignationsText)}"
             tools:text="Todavía sin asignar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
-            android:textSize="@dimen/caption_text_size"/>
+            android:textSize="@dimen/caption_text_size"
+            app:layout_constraintRight_toLeftOf="@+id/bill_line_ok"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp" />
 
         <TextView
             android:id="@+id/bill_line_price_text"
