--- a/app/src/main/res/layout/item_bill_line_assignation_choosing.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation_choosing.xml
@@ -18,8 +18,8 @@
             android:id="@+id/selected_product_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="@dimen/list_item_horizontal_padding"
+            android:layout_marginStart="@dimen/list_item_horizontal_padding"
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/include2"
