--- a/app/src/main/res/layout/dialog_edit_product.xml
+++ b/app/src/main/res/layout/dialog_edit_product.xml
@@ -16,18 +16,18 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent">
+            app:layout_constraintRight_toRightOf="parent"
+            android:hint="@string/dialog_edit_product_hint_product_name">
 
             <EditText
                 android:id="@+id/dialog_edit_product_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"
-                android:hint="@string/dialog_edit_product_hint_product_name"/>
+                android:inputType="textCapSentences" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -40,14 +40,14 @@
             android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/layout1"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/layout1">
+            app:layout_constraintTop_toBottomOf="@+id/layout1"
+            android:hint="@{@string/dialog_edit_product_hint_product_price(utils.currencySymbol)}">
 
             <EditText
                 android:id="@+id/dialog_edit_product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"
-                android:hint="@{@string/dialog_edit_product_hint_product_price(utils.currencySymbol)}"
+                android:inputType="numberDecimal"
                 tools:hint="Precio (€)"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -61,14 +61,14 @@
             android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/layout2"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/layout2">
+            app:layout_constraintTop_toBottomOf="@+id/layout2"
+            android:hint="@string/dialog_edit_product_hint_product_quantity">
 
             <EditText
                 android:id="@+id/dialog_edit_product_quantity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textCapSentences"
-                android:hint="@string/dialog_edit_product_hint_product_quantity"/>
+                android:inputType="number"/>
 
         </android.support.design.widget.TextInputLayout>
 
