--- a/app/src/main/res/layout/item_assignation_dialog_person.xml
+++ b/app/src/main/res/layout/item_assignation_dialog_person.xml
@@ -8,16 +8,17 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/list_item_horizontal_padding"
+        android:paddingRight="@dimen/list_item_horizontal_padding"
+        android:paddingTop="@dimen/list_item_vertical_padding"
+        android:paddingBottom="@dimen/list_item_vertical_padding" >
 
         <com.buildware.widget.indeterm.IndeterminateCheckBox
             android:id="@+id/item_assignation_dialog_checkbox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:text="@{item.name}"
             tools:text="Samuel Soutullo"/>
