--- a/app/src/main/res/layout/item_bill_line_assignation.xml
+++ b/app/src/main/res/layout/item_bill_line_assignation.xml
@@ -12,49 +12,48 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/list_item_horizontal_padding"
+        android:paddingRight="@dimen/list_item_horizontal_padding"
+        android:paddingTop="@dimen/list_item_vertical_padding"
+        android:paddingBottom="@dimen/list_item_vertical_padding">
 
         <TextView
             android:id="@+id/bill_line_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="@{item.name}"
             tools:text="Producto A"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/list_title_text_size"/>
 
         <TextView
             android:id="@+id/bill_line_assignations_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+
             android:layout_marginTop="0dp"
             android:text="@{item.getAssignedPeopleAsString(context, billLineAssignationsText)}"
             tools:text="Todavía sin asignar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_line_name_text"
-            android:textSize="@dimen/caption_text_size"
+            android:textSize="@dimen/list_caption_text_size"
             app:layout_constraintRight_toLeftOf="@+id/bill_line_ok"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginRight="@dimen/list_item_horizontal_padding"
+            android:layout_marginEnd="@dimen/list_item_horizontal_padding" />
 
         <TextView
             android:id="@+id/bill_line_price_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="0dp"
-            android:text="@{@string/generic_item_price(item.price, utils.currencySymbol)}"
+            android:text="@{utils.getPriceAsString(item.price)}"
             tools:text="2,37 €"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_line_assignations_text"
-            android:textSize="@dimen/caption_text_size"/>
+            android:textSize="@dimen/list_caption_text_size"/>
 
         <ImageView
             android:id="@+id/bill_line_ok"
@@ -64,9 +63,7 @@
             app:layout_constraintTop_toTopOf="@+id/bill_line_name_text"
             android:layout_marginTop="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/bill_line_price_text"
-            android:layout_marginBottom="0dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
+
             app:layout_constraintRight_toRightOf="parent"
             android:tint="@color/material_green_500"
             android:visibility="@{item.persons.isEmpty()? View.GONE : View.VISIBLE}"
