--- a/app/src/main/res/layout/item_product_manual_transcription_activity.xml
+++ b/app/src/main/res/layout/item_product_manual_transcription_activity.xml
@@ -11,40 +11,38 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/list_item_horizontal_padding"
+        android:paddingRight="@dimen/list_item_horizontal_padding"
+        android:paddingTop="@dimen/list_item_vertical_padding"
+        android:paddingBottom="@dimen/list_item_vertical_padding">
 
         <TextView
             android:id="@+id/product_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:text="@{item.name}"
             tools:text="Producto A"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@android:color/black"/>
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/list_title_text_size"/>
 
         <TextView
             android:id="@+id/bill_price_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@{@string/manual_transcription_product_price(item.unitPrice, utils.currencySymbol)}"
+            android:text="@{@string/manual_transcription_product_price(utils.getPriceAsString(item.unitPrice))}"
             tools:text="Precio/unidad: 2,47€"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/product_name_text"
-            android:textSize="@dimen/caption_text_size"/>
+            android:textSize="@dimen/list_caption_text_size"/>
 
         <TextView
             android:id="@+id/product_quantity_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            android:textSize="@dimen/caption_text_size"
+            android:textSize="@dimen/list_caption_text_size"
             android:text="@{@string/manual_transcription_product_quantity(item.quantity)}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bill_price_text"
@@ -55,8 +53,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginBottom="0dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginTop="0dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/content_description_edit_product"
@@ -64,15 +62,16 @@
             app:layout_constraintRight_toLeftOf="@+id/delete_product"
             app:layout_constraintTop_toTopOf="@+id/delete_product"
             app:srcCompat="@drawable/ic_edit_black_24dp"
-            android:tint="@color/light_icon_tint"/>
+            android:tint="@color/light_icon_tint"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageButton
             android:id="@+id/delete_product"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginBottom="0dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginEnd="0dp"
             android:layout_marginTop="0dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/content_description_delete_product"
